--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -10,6 +10,6 @@ jobs:
       - name: Update gist
         uses: matchai/waka-box@master
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 968220c97e8da1d047a9a480fa432e54
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIST_ID: https://gist.github.com/YunYouJun/7c4f0bdcafd0984278a9f6c1c7ce52a4
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
